# skylabs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Skylabs.sln
AppFramework/: AppFramework.vcxproj  AppFramework.vcxproj.filters  CApp.cpp  CApp.h  CApplication.cpp  CApplication.h  CErrorHandler.cpp  CErrorHandler.h  dbg.cpp  dbg.h  main.cpp  pizdos.h  stdafx.h
AppFramework/math/: vector.cpp  vector.h  vertex.h
AppFramework/render/: CameraBase.cpp  CameraBase.h
Render/: CameraBase.h  Render.vcxproj  Render.vcxproj.filters
Render/x64/Debug/: Render.dll.recipe  vc143.idb
Render/x64/Debug/Render.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Render.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Skylabs/: Skylabs.vcxproj  Source.cpp
cmake/Modules/: FindGLFW3.cmake
libs/: build_dependencies.cmd  build_dependencies.ps1  build_dependencies.sh  readme.txt
libs/SDL3/lib/: libSDL3.so.0.1.3
libs/SDL3/lib/cmake/SDL3/: SDL3sharedTargets-release.cmake  SDL3testTargets.cmake
libs/SDL3/lib/pkgconfig/: sdl3.pc
libs/sources/SDL-preview-3.1.3/android-project/gradle/wrapper/: gradle-wrapper.properties
math/: vector.cpp  vertex.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  SDL.cpp  SDL.hpp  SDL_Vulkan.hpp  camera.hpp  coremain.cpp  header_factory.cpp  headerfactory.cpp  launcher.cpp  launcher.hpp  libraries.hpp  main.cpp  posixapp.cpp  renderapi.hpp  renderer.hpp  renderer_context.hpp  vulkan_initializer.cpp  vulkan_initializer.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_renderer_context.cpp  vulkan_renderer_context.hpp  vulkan_window.hpp  vulkanapi.cpp  vulkanapi.hpp  winapp.cpp  window.hpp
src/core/SDL/: SDL.hpp  SDL_context.cpp  SDL_context.hpp  SDL_video.hpp  SDL_vulkan.hpp  SDL_window.cpp  SDL_window.hpp
src/core/render/: instance.cpp  instance.hpp  renderer.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/core/render/vulkan/: instance.cpp  instance.hpp  vulkan.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_window.hpp
src/core/render/vulkan/extensions/: debug_messenger.cpp  debug_messenger.hpp  extension_manager.hpp
src/coreinitializer/: CMakeLists.txt  coreinitializer.cpp
src/launcher/: CMakeLists.txt  main.cpp
src/public/: CMakeLists.txt  application.cpp  application.hpp  baseapplication.cpp  baseapplication.hpp  charconverters.cpp  charconverters.hpp  commandline.cpp  commandline.hpp  common.cpp  common.hpp  console.cpp  console.hpp  exception.cpp  exception.hpp  exceptions.cpp  exceptions.hpp  icommandline.hpp  macros.hpp  os.hpp  platform.hpp  posixapp.cpp  publicapi.hpp  resourceloader.hpp  stc.hpp  string.hpp  unicode.cpp  unicode.hpp  utilities.hpp  version.hpp  winapp.cpp  window.hpp
src/public/nowide/: convert.hpp  utf.hpp
src/public/tier0/: dbg.hpp
src/public/utf/: convert.hpp  is_string_container.hpp  utf.hpp
src/shaders/: CMakeLists.txt  shader.comp  shader.frag  shader.vert
src/tier0/: CMakeLists.txt  dbg.cpp
src/unused/appframework/: CMakeLists.txt  appframework.cpp  appframework.hpp
src/unused/launcher/: CMakeLists.txt  launcher.cpp
src/unused/tier0/: CMakeLists.txt  dbg.cpp  dbg.hpp  exception.cpp  exception.hpp  otherstuff.hpp
